# RUNEtag

./: .gitignore  LICENSE  README.md
RUNETag/: CMakeLists.txt  auxmath.cpp  auxrenderer.cpp  coding.cpp  compile_commands.json  digitalmarkermodel.cpp  ellipsedetector.cpp  ellipsefitter.cpp  ellipsepoint.cpp  ellipserefine.cpp  fpscounter.cpp  hirestimer.cpp  markerdetector.cpp  markerpose.cpp  slot.cpp  slotfitter.cpp
RUNETag/RUNEtagdetect/: CMakeLists.txt  RUNEtagdetect.cpp  test_occlusion.cpp  test_occlusion.h
RUNETag/codegen/: CMakeLists.txt  codegen.cpp
RUNETag/focaltest/: CMakeLists.txt  focaltest.cpp
RUNETag/imagetest/: CMakeLists.txt  imagetest.cpp
RUNETag/include/: auxmath.hpp  auxrenderer.hpp  coding.h  digitalmarkermodel.hpp  ellipsedetector.hpp  ellipsefitter.hpp  ellipsepoint.hpp  ellipserefine.hpp  fpscounter.hpp  hirestimer.hpp  imgtextstream.hpp  markerdetected.hpp  markerdetector.hpp  markerpose.hpp  runetag.hpp  slot.hpp  slotfitter.hpp
RUNETag/occlusiontest/: CMakeLists.txt  occlusiontest.cpp
RUNETag/virtualcamera/: CMakeLists.txt  Camera.cpp  Camera.h  VirtualCamera.cpp  VirtualCamera.h  main.cpp
RUNETagGenerator/: CMakeLists.txt  MarkPoint.cpp  MarkPoint.h  MarkPointSet.h  TagCode.cpp  TagCode.h  main.cpp  runetaggenerator.cpp  runetaggenerator.h  runetaggenerator.qrc  runetaggenerator.ui
