PROJECT( RUNEtagdetect )

SET(Boost_ADDITIONAL_VERSIONS "1.49.0" )

#SET(Boost_DEBUG ON)
#SET(Boost_DETAILED_FAILURE_MSG ON)
SET(Boost_USE_STATIC_LIBS ON)

find_package( Boost REQUIRED COMPONENTS program_options )

IF( VERBOSE_FLAG  )
ADD_DEFINITIONS( -DVERBOSE )
ENDIF()

INCLUDE_DIRECTORIES(.
					"../include"
					${OpenCV_INCLUDE_DIRS}
					${Boost_INCLUDE_DIRS}
					)
					

ADD_EXECUTABLE( ${PROJECT_NAME} RUNEtagdetect.cpp  test_occlusion.cpp test_occlusion.h)

TARGET_LINK_LIBRARIES(  ${PROJECT_NAME} RUNETag ${OpenCV_LIBS} ${Boost_PROGRAM_OPTIONS_LIBRARY} ntl )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
