PROJECT( codegen )

IF( VERBOSE_FLAG  )
ADD_DEFINITIONS( -DVERBOSE )
ENDIF()

INCLUDE_DIRECTORIES(.
					"../include"
					)
					
ADD_EXECUTABLE( ${PROJECT_NAME} codegen.cpp )

TARGET_LINK_LIBRARIES(  ${PROJECT_NAME} RUNETag  ntl )
INSTALL( TARGETS ${PROJECT_NAME} DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
