PROJECT( imagetest )



if( LIBGT_LIBS_DIRS )
	MESSAGE( STATUS "LIBGT_LIBS_DIRS: ${LIBGT_LIBS_DIRS}" )
else()
	MESSAGE( ERROR "You must set LIBGT_LIBS_DIRS  PATH variable" )
endif()


IF( VERBOSE_FLAG  )
ADD_DEFINITIONS( -DVERBOSE )
ENDIF()


INCLUDE_DIRECTORIES(.
					"../include"
					"../virtualcamera"
					${OpenCV_INCLUDE_DIRS}
					)
					
ADD_EXECUTABLE( ${PROJECT_NAME} imagetest.cpp )

TARGET_LINK_LIBRARIES(  ${PROJECT_NAME} libRUNETag virtualcamera ${OpenCV_LIBS}  WinNTL )
INSTALL( TARGETS ${PROJECT_NAME} DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
