PROJECT( occlusiontest )



IF( VERBOSE_FLAG  )
ADD_DEFINITIONS( -DVERBOSE )
ENDIF()


INCLUDE_DIRECTORIES(.
					"../include"
					"../virtualcamera"
					${OpenCV_INCLUDE_DIRS}
					)
					
ADD_EXECUTABLE( ${PROJECT_NAME} occlusiontest.cpp )

TARGET_LINK_LIBRARIES(  ${PROJECT_NAME} libRUNETag virtualcamera ${OpenCV_LIBS}  WinNTL )
INSTALL( TARGETS ${PROJECT_NAME} DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
